Connection JSON-RPC rather than websocket, use individual as a request to send to Ripple API, start EA structure